--- a/scripts/install
+++ b/scripts/install
@@ -100,7 +100,7 @@ else
         /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
         brew install wget
     fi
-    echo "other"
+    other
 fi
 
 
